# vhdl_spartan7_cpp_library

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: basic_usage.cpp
src/cpp/: constraint_solver.cpp  constraint_solver.hpp  genetic_algorithm.cpp  genetic_algorithm.hpp  hardware_mapper.cpp  hardware_mapper.hpp  module_registry.cpp  module_registry.hpp  spartan7_optimizer.cpp  spartan7_optimizer.hpp
src/python/: code_generator.py  hardware_analyzer.py  spartan7_optimizer.py  vivado_bridge.py
src/vhdl/: demux_generic.vhdl  memory_controller.vhdl  mux_generic.vhdl  wrapper_template.vhdl
src/vhdl/vivado_tcl/: bitstream_gen.tcl  device_analyzer.tcl  synthesis.tcl
tests/: test_optimizer.cpp
